--- a/cart.html
+++ b/cart.html
@@ -42,8 +42,12 @@
                 </div>
           </li>
             <li class="nav-item">
-              <a class="nav-link active" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
-            </li>
+            <a class="nav-link" href="cart.html" class="btn btn-primary position-relative">
+              <i class="fas fa-shopping-cart">
+                <span class="position-absolute top-100 start-10 translate-middle badge rounded-pill bg-danger" id="carritoCantidad"></span>
+              </i>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
